--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ ul li {
 }
 
 .sitemap .second-level .page {
-  width: calc(var(--card-size, 200px) - 1rem - 1px - (var(--gap-size) / 4) - calc(var(--gap-size) / 4 + 3px));
+  width: calc( var(--card-size, 200px) - 1rem - 1px -  (var(--gap-size) / 4) -  calc(var(--gap-size) / 4 + 3px));
   position: relative;
   margin-left: auto;
   margin-right: 0;
@@ -181,13 +181,17 @@ ul li {
   position: absolute;
   left: calc(var(--gap-size) - 5px);
   top: 0;
-  height: calc(100% - var(--gap-size));
+  height: calc(100% - var(--gap-size) / 2);
   background-color: var(--card-color);
   width: 2px;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   -webkit-box-shadow: 1px 1px 4px 0px #000000;
   box-shadow: 1px 1px 4px 0px #000000;
+}
+
+.sitemap .third-level li:last-of-type {
+  padding-bottom: 0;
 }
 
 .sitemap .third-level .page {
